closer to making typed data DataView work

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
             <select id="decorhex-controls">
                 <option value="8u">8-bit unsigned</option>
                 <option value="8s">8-bit signed</option>
+                <option value="16ule">16-bit unsigned LE</option>
+                <option value="16sle">16-bit signed LE</option>
+                <option value="16ube">16-bit unsigned BE</option>
+                <option value="16sbe">16-bit signed BE</option>
             </select>
             <br/>
             <br/>
