all basic data type reads now working

--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 <option value="16sle">16-bit signed LE</option>
                 <option value="16ube">16-bit unsigned BE</option>
                 <option value="16sbe">16-bit signed BE</option>
+                <option value="32ule">32-bit unsigned LE</option>
+                <option value="32sle">32-bit signed LE</option>
+                <option value="32ube">32-bit unsigned BE</option>
+                <option value="32sbe">32-bit signed BE</option>
+                <option value="32fle">32-bit float LE</option>
+                <option value="32fbe">32-bit float BE</option>
+                <option value="64fle">64-bit float LE</option>
+                <option value="64fbe">64-bit float BE</option>
             </select>
             <br/>
             <br/>
