byte display now more interactive

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
             <div id="tree"><ul><li>TREE WILL GO HERE</li></ul></div>
         </div>
         <div id="binarydata">
-            <span id="byteposdisplay">Current address:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><input type="checkbox" id="hexcheck" value="Hex" />Hex<br/>
+            <button type="button" id="btnBack" disabled>&#8592;</button>&nbsp;&nbsp;
+            <span id="byteposdisplay">Current address:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><input type="checkbox" id="hexcheck" value="Hex" />Hex&nbsp;&nbsp;
+            <button type="button" id="btnForward" disabled>&#8594;</button>
+            <br/>
             <div id="byteposchoose">
                 Go to address: 
                 <input type="text" id="bytepostext" value="" />
