--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/jstree.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default/style.min.css" />
-        <link rel="stylesheet" type="text/css" href="main.css?20161227" />
-        <script src="utilities.js?20161227"></script>
-        <script src="filefinder.js?20161227"></script>
-        <script src="mediapeek.js?20161227"></script>
+        <link rel="stylesheet" type="text/css" href="main.css?20161228" />
+        <script src="utilities.js?20161228"></script>
+        <script src="filefinder.js?20161228"></script>
+        <script src="pngtree.js?20161228"></script>
+        <script src="mediapeek.js?20161228"></script>
     </head>
     <body>
         <div id="title">MediaPeek</div>
