recursive tree processing function now fully working

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/jstree.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default/style.min.css" />
-        <link rel="stylesheet" type="text/css" href="main.css?20161228" />
-        <script src="utilities.js?20161228"></script>
-        <script src="filefinder.js?20161228"></script>
-        <script src="pngtree.js?20161228"></script>
-        <script src="mediapeek.js?20161228"></script>
+        <link rel="stylesheet" type="text/css" href="main.css?20170105" />
+        <script src="utilities.js?20170105"></script>
+        <script src="filefinder.js?20170105"></script>
+        <script src="pngtree.js?20170105"></script>
+        <script src="mediapeek.js?20170105"></script>
     </head>
     <body>
         <div id="title">MediaPeek</div>
         <div id="header">
-            Copyright 2016, by James Halliday | <a href="mailto:malictus@gmail.com">Contact</a> | <a href="https://github.com/malictus/mediapeek">Github</a>
+            Copyright 2017, by James Halliday | <a href="mailto:malictus@gmail.com">Contact</a> | <a href="https://github.com/malictus/mediapeek">Github</a>
         </div>
         <div id="basicinfo">
             <div><b>File Name:</b> <span id="filename"></span></div>
@@ -42,7 +42,7 @@
             <video id="videodisplay"></video>
         </div>
         <div id="treecontrols">
-            <div id="tree"><ul><li>TREE WILL GO HERE</li></ul></div>
+            <div id="tree"></div>
         </div>
         <div id="binarydata">
             <button type="button" id="btnBack" disabled>&#8592;</button>&nbsp;&nbsp;
