more with tree node display

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
         <div id="treecontrols">
             <div id="tree"></div>
+            <div id="moreinfo"></div>
         </div>
         <div id="binarydata">
             <button type="button" id="btnBack" disabled>&#8592;</button>&nbsp;&nbsp;
