PNG files reading correctly

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/jstree.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default/style.min.css" />
-        <link rel="stylesheet" type="text/css" href="main.css?20170123" />
-        <script src="utilities.js?20170123"></script>
-        <script src="filefinder.js?20170123"></script>
-        <script src="pngtree.js?20170123"></script>
-        <script src="mediapeek.js?20170123"></script>
+        <link rel="stylesheet" type="text/css" href="main.css?20170127" />
+        <script src="utilities.js?20170127"></script>
+        <script src="filefinder.js?20170127"></script>
+        <script src="pngtree.js?20170127"></script>
+        <script src="mediapeek.js?20170127"></script>
     </head>
     <body>
         <div id="title">MediaPeek</div>
@@ -28,7 +28,7 @@
                 <li>100% safe. Reads files only.</li>
                 <li>Upoads nothing to server.</li>
             </ul>
-            Supported Formats: None yet!
+            Supported Formats: Only PNG so far
         </div>
         <div id="filechoosearea">
             <div id="filedroparea">
